syntax = "proto3";
package pb;
option go_package  = "internal/pb";

service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns(CreateCategoryResponse) {}
    rpc ListCategory(ListCategoryRequest) returns(ListCategoryResponse){}
    rpc GetCategory(GetCategoryRequest) returns(GetCategoryResponse) {}
}

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message CreateCategoryResponse {
    Category category = 1;
}

message ListCategoryRequest {

}

message ListCategoryResponse {
    repeated Category categories = 1;
    int32 total = 2;
}

message GetCategoryRequest {
    string id = 1;
}

message GetCategoryResponse {
    Category category = 1;
}

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}